--- a/WebServer/KittyWar/templates/home.html
+++ b/WebServer/KittyWar/templates/home.html
@@ -24,8 +24,7 @@
       <!--unordered list-->
       <ul>
         <li><a href="{% url 'kittywar:home' %}" class="selected">Cats</a></li>
-        <li><a href="profile.html">Profile</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="profile.html">Chance Cards</a></li>
       </ul>
     </nav>
 
