--- a/WebServer/KittyWar/templates/register.html
+++ b/WebServer/KittyWar/templates/register.html
@@ -6,8 +6,10 @@
 
 <head>
 
-    <link rel = "stylesheet" type = "text/css" href = "//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <link rel = "stylesheet" type = "text/css" href = "{% static 'kittywar.css' %}" />
+    <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
+        <link rel = "stylesheet" type = "text/css" href = "{% static 'register.css' %}" />
+        <link rel = "stylesheet" type = "text/css" href = "{% static 'normalize.css' %}" />
+        <link rel = "stylesheet" type = "text/css" href = "{% static 'responsive.css' %}" />
     <title> Kitty War - Register </title>
 </head>
 
@@ -32,11 +34,10 @@
 
 
             <div class="form-group text-center">
-                <button type="Submit" class="btn btn-primary"> Submit </button>
+                <button type="Submit" class="btn btn-primary"> Register </button>
             </div>
 
         </form>
-
         <a href="{% url 'kittywar:login' %}">Log in</a>
 
     </div>
