Add chance cards and play webpage

--- a/WebServer/KittyWar/templates/play.html
+++ b/WebServer/KittyWar/templates/play.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Kitty War</title>
+    <title>Find Match Here!!!</title>
 
     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
     <link rel = "stylesheet" type = "text/css" href = "{% static 'main.css' %}" />
@@ -17,13 +17,13 @@
 <body>
 <header>
     <div id="index-title">
-    <h1>Kitty War</h1>
+    <h1>Find Match Here!!!</h1>
     <a href="{% url 'kittywar:logout' %}"> <b>Log out</b> </a>
     </div>
     <nav>
       <!--unordered list-->
       <ul>
-        <li><a href="{% url 'kittywar:home' %}" class="selected">Cats</a></li>
+        <li><a href="{% url 'kittywar:home' %}" >Cats</a></li>
         <li><a href="{% url 'kittywar:chance' %}">Chance Cards</a></li>
         <li><a href="{% url 'kittywar:play' %} ">Find Match Here!</a></li>
       </ul>
