--- a/WebServer/KittyWar/static/main.css
+++ b/WebServer/KittyWar/static/main.css
@@ -137,16 +137,10 @@ h2 {
 }
 
 /*page porfolio*/
-#gallery {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
 
 #gallery li {
   float: left;
-  width: 45%;
-  margin: 2.5%;
+
   background-color: #f5f5f5;
   color: #bdc3c7;
 }
@@ -210,11 +204,17 @@ footer {
 nav {
   background: url(../img/header-background.jpg);
 }
-/*register html*/
 
 
+#catimg img{
+  margin: 0;
+  float: left;
+  padding-right: 100px;
+}
 
-
+#catimg {
+  padding-bottom: 180px;
+}
 
 
 
