--- a/WebServer/KittyWar/static/main.css
+++ b/WebServer/KittyWar/static/main.css
@@ -2,7 +2,8 @@
 a {
   /*underline of text*/
   text-decoration: none;
-  color: #6ab47b;
+  color: #9932CC;
+  font-size: 1.2em;
 }
 
 h1 {
@@ -140,9 +141,10 @@ h2 {
 
 #gallery li {
   float: left;
-
-  background-color: #f5f5f5;
-  color: #bdc3c7;
+  color: #000;
+  display: inline-block;
+  width: 45%;
+  margin: 2.5%;
 }
 
 #gallery li a p {
@@ -205,6 +207,12 @@ nav {
   background: url(../img/header-background.jpg);
 }
 
+#gallery {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 
 #catimg img{
   margin: 0;
@@ -216,6 +224,8 @@ nav {
   padding-bottom: 180px;
 }
 
-
+#abilityimg {
+  text-align: center;
+}
 
 
