--- a/WebServer/KittyWar/templates/ability.html
+++ b/WebServer/KittyWar/templates/ability.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Kitty War</title>
+    <title>Abilities</title>
 
     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
     <link rel = "stylesheet" type = "text/css" href = "{% static 'main.css' %}" />
@@ -17,7 +17,7 @@
 <body>
 <header>
     <div id="index-title">
-    <h1>Kitty War</h1>
+    <h1>Ability</h1>
     <a href="{% url 'kittywar:logout' %}"> <b>Log out</b> </a>
     </div>
     <nav>
@@ -31,20 +31,18 @@
 </header>
 <div id="wrapper">
     <section>
-        <ul id="gallery">
-            {% for cat in myvar%}
-            <div id=catimg>
-                <a href="{% url 'kittywar:ability' %}">
-                <img src="{% static "" %}cat/{{cat.title}}.jpg" height="330" width="230"/>
-                </a>
 
-                <h4>Name:<a href="{% url 'kittywar:ability' %}"> {{cat.title}}</a></h4>
-                <h4>Description: {{cat.description}}</h4>
-                <h4>Health: {{cat.health}}</h4>
-                <h4>Default: {{cat.default}}</h4>
+            {% for ability in myvar%}
+            <div id=abilityimg>
+                <a href="{% url 'kittywar:home' %}">
+                <img src="{% static "" %}Ability/{{ability.title}}.jpg" height="330" width="230"/>
+                </a>
+                <h4>Name:<a href="{% url 'kittywar:home' %}"> {{ability.title}}</a></h4>
+                <h4>Description: {{ability.description}}</h4>
+
             </div>
             {% endfor %}
-        </ul>
+
     </section>
 </div>
 
