--- a/WebServer/KittyWar/templates/chance.html
+++ b/WebServer/KittyWar/templates/chance.html
@@ -30,7 +30,69 @@
     </nav>
 
 </header>
+<div id="wrapper">
+  <h3>You may have following chance cards...</h3>
+  <section>
+    <ul id="gallery">
+      <li>
+        <a href="{% static "Chance/Can_t_Guard 509.jpg" %}">
+          <img src="{% static "Chance/Can_t_Guard 509.jpg" %}" alt="" height="230" width="180">
+          <p>Scratch can't be dodged</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% static "Chance/Reverse_Scratch 509.jpg" %}">
+          <img src="{% static "Chance/Reverse_Scratch 509.jpg" %}" alt="" height="230" width="180">
+          <p>Reverse the damage</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% static "Chance/Double_Purring509.jpg" %}">
+          <img src="{% static "Chance/Double_Purring509.jpg" %}" alt="" height="230" width="180">
+          <p>Gain 2 HP if you don't get attacked</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% static "Chance/Double_Scratch509.jpg" %}">
+          <img src="{% static "Chance/Double_Scratch509.jpg" %}" alt="" height="230" width="180">
+          <p>Cause 2 points damage</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% static "Chance/Guaranteed_Purring 509.jpg" %}">
+          <img src="{% static "Chance/Guaranteed_Purring 509.jpg" %}" alt="" height="230" width="180">
+          <p>Gain 1 HP no matter you get attacked or not</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% static "Chance/Guard_and_Draw 509.jpg" %}">
+          <img src="{% static "Chance/Guard_and_Draw 509.jpg" %}" alt="" height="230" width="180">
+          <p>Draw a new chance card if you successfully dodge</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% static "Chance/Guard_and_Heal 509.jpg" %}">
+          <img src="{% static "Chance/Guard_and_Heal 509.jpg" %}" alt="" height="230" width="180">
+          <p>Gain 1 HP if you successfully dodge</p>
+        </a>
+      </li>
+      <li>
+        <a href="{% static "Chance/Purr_and_Draw 509.jpg" %}">
+          <img src="{% static "Chance/Purr_and_Draw 509.jpg" %}" alt="" height="230" width="180">
+          <p>Draw a new chance card if successfully gain 1 HP</p>
+        </a>
+      </li>
 
+      <li>
+        <a href="{% static "Chance/Can_t_Reverse 509.jpg" %}">
+          <img src="{% static "Chance/Can_t_Reverse 509.jpg" %}" alt="" height="230" width="180">
+          <p>Damage can't be reversed</p>
+        </a>
+      </li>
+
+
+    </ul>
+  </section>
 <footer>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
