--- a/WebServer/KittyWar/templates/home.html
+++ b/WebServer/KittyWar/templates/home.html
@@ -30,6 +30,7 @@
     </nav>
 </header>
 <div id="wrapper">
+    <h3>Congratuations! You have following cats...</h3>
     <section>
         <ul id="gallery">
             {% for cat in myvar%}
@@ -47,10 +48,17 @@
         </ul>
     </section>
 </div>
+<div id="faq">
+    <section>
+        <h1>F &nbsp&nbsp A &nbsp&nbsp Q</h1>
+    </section>
+        <h3> What is Kitty War? &nbsp&nbsp&nbsp&nbsp&nbsp Cat Card Game!!</h3>
+        <h3>What is the basic movement? &nbsp&nbsp&nbsp Purr&Guard&Scratch</h3>
+        <h3>...</h3>
+</div>
 
 <footer>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <p>Copyright &copy; 2017 Kitty War</p>
 </footer>
 
 </body>
